fix Iphone alignment

--- a/src/app/design/frontend/Scandiweb/pwa/src/app/component/MyAccountOverlay/MyAccountOverlay.extended.style.scss
+++ b/src/app/design/frontend/Scandiweb/pwa/src/app/component/MyAccountOverlay/MyAccountOverlay.extended.style.scss
@@ -60,11 +60,11 @@
 
         @include after-mobile {
             width: 37.5%;
-            max-width: 375px;
+            max-width: 410px;
         }
 
         .Form {
-            max-width: 375px;
+            max-width: 410px;
         }
 
         &_right {
@@ -107,7 +107,7 @@
             .MyAccountOverlay {
                 &-Additional {
                     display: block;
-                    max-width: 375px;
+                    max-width: 410px;
 
                     section:first-of-type {
                         padding-top: 0;
@@ -427,8 +427,8 @@
     }
 
     &-Social {
-        padding: 0 12px;
-        max-width: 375px;
+        padding: 0 15px;
+        max-width: 410px;
         margin: auto;
 
         h4 {
